@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2013-09-24 Davide
+	* Add "DG_MeadePoint" to the list of known susy-sample patterns
+
 2013-08-19 Davide
 	* Add secondary vertex mass to Jet
 
